[package]
name = "qvm"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "0.15.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
byteorder = "1.5.0"
clap = { version = "4.5.49", features = ["derive"] }
three-d = "0.18.2"
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.41"
