[package]
name = "tasjr"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
three-d = { git = "https://github.com/asny/three-d.git" }

[dependencies]
binrw = "0.15.0"
bit-set = "0.8.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
byteorder = "1.5.0"
clap = { version = "4.5.49", features = ["derive"] }
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "wayland"] }
egui_dock = "0.18.0"
glam = "0.30.8"
three-d = { version = "0.19.0", default-features = false }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.41"
